@@ -5719,6 +5719,8 @@ void screen_store_scanline_rainbow_border_comun(z80_int *puntero_buf_rainbow,int
 					int jj;
                     z80_int color_final_border=color_border;
 
+                    if (core_spectrum_executed_halt_in_this_scanline) color_final_border ^=7;
+
 					for (jj=0;jj<t_estados_por_pixel;jj++) {
 						store_value_rainbow(puntero_buf_rainbow,color_final_border);
 						if (MACHINE_IS_TBBLUE) {
@@ -5746,6 +5748,7 @@ void screen_store_scanline_rainbow_border_comun(z80_int *puntero_buf_rainbow,int
 
 	}
 
+    core_spectrum_executed_halt_in_this_scanline=0;
 
 }
 
