@@ -9,6 +9,7 @@ Added machine Timex TC2048
 
 Improved ZX Spectrum Next emulation: added sprite rendering priority bit
 Improved ZRCP: allow to change command prompt
+Improved Debugging: Added a setting to show on which scanline has been executed a Halt, inverting border color
 
 Improved SmartLoad & Drag-Drop: 
 -Allow to load a .rom file as a custom rom file for the current machine
